Bug 1233135 - Do not touch display value of anonymous box for ruby. r=dbaron